--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -17,7 +17,9 @@ jobs:
       uses: actions/setup-node@v2
       with:
         node-version: 14
-        
+    - name: Install commander
+      run: |
+        npm install commander        
     - name: Install jq
       run: |
         npm install -g jq
