--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -23,6 +23,9 @@ jobs:
     - name: Install jq
       run: |
         npm install -g jq
+    - name: Install async
+      run: |
+        npm install -g async
 
     - name: Sign up to Netlify
       run: |
