--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -23,9 +23,10 @@ jobs:
     - name: Install jq
       run: |
         npm install -g jq
-    - name: Install async
+    - name: Install other dependencies
       run: |
         npm install -g async
+        npm install -g rimraf
 
     - name: Sign up to Netlify
       run: |
