--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -14,20 +14,7 @@ jobs:
       uses: actions/checkout@v2
       
     - name: Setup Node.js
-      uses: actions/setup-node@v2
-      with:
-        node-version: 14
-    - name: Install commander
-      run: |
-        npm install -g commander
-    - name: Install other dependencies
-      run: |
-        npm install -g async
-        npm install -g rimraf
-        npm install -g winston
-    - name: Install jq
-      run: |
-        npm install -g jq
+      run: sudo apt install -y jq
 
 
     - name: Sign up to Netlify
